<resources>
    <string name="app_name">SiRFS Companion</string>
    <string name="ccInfo">¿Con quién tengo el placer de hablar hoy?</string>
    <string name="ccName">Nombre de tu personaje</string>
    <string name="fue">FUE</string>
    <string name="des">DES</string>
    <string name="pun">PUN</string>
    <string name="intel">INT</string>
    <string name="sab">SAB</string>
    <string name="agi">AGI</string>
    <string name="vol">VOL</string>
    <string name="_1d10">1D10</string>
    <string name="pv">PV</string>
    <string name="roll">ROLL</string>
    <string name="max">MAX</string>
    <string name="pe">PE</string>
    <string name="creacionPersonaje">Creación de personaje</string>
    <string name="detailInfo">INFORMACIÓN</string>
    <string name="detailLevelUp">SUBIR DE NIVEL</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="infoChar">Información del personaje</string>
    <string name="listaPociones">Lista de pociones</string>
    <string name="cazadorMascotas">Mascotas</string>
    <string name="Damage">Daño</string>
    <string name="armor">Armadura</string>
    <string name="CritBonus">Bon. Crítico</string>
    <string name="critDmgBonus">Bon. Daño crítico</string>
    <string name="druidaTransformaciones">Transformaciones</string>
    <string name="luSelect">Selecciona uno de los siguentes atributos:</string>
    <string name="luFUE">+1 FUE</string>
    <string name="luDES">+1 DES</string>
    <string name="luPUN">+1 PUN</string>
    <string name="luINT">+1 INT</string>
    <string name="luSAB">+1 SAB</string>
    <string name="luAGI">+1 AGI</string>
    <string name="luVOL">+1 VOL</string>
    <string name="luPV">+5 PV</string>
    <string name="luPE">+5 PE</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="add_new_item">AÑADIR UN NUEVO OBJETO</string>
    <string name="newItemName">Nombre del objeto</string>
    <string name="newItemDesc">Descripción del objeto</string>
    <string name="newItemQuant">Cantidad a añadir</string>
    <string name="addNewItemButton">Añadir objeto</string>
    <string name="enc">ENC</string>
    <string name="meleeWeapons">ARMAS CUERPO A CUERPO</string>
    <string name="addWeapon">AÑADIR ARMA</string>
    <string name="removeWeapon">ELIMINAR ARMA</string>
    <string name="weaponName">Nombre del arma</string>
    <string name="additionalDmg">Daño adicional</string>
    <string name="addWeaponButton">Añadir arma</string>
    <string name="rangedWeapons">ARMAS A DISTANCIA</string>
    <string name="addHeadArmor">AÑADIR (CABEZA)</string>
    <string name="removeHeadArmor">ELIMINAR (CABEZA)</string>
    <string name="addBodyArmor">AÑADIR (CUERPO)</string>
    <string name="removeBodyArmor">ELIMINAR (CUERPO)</string>
    <string name="addLegArmor">AÑADIR (PIERNAS)</string>
    <string name="removeLegArmor">ELIMINAR (PIERNAS)</string>
    <string name="addFeetArmor">AÑADIR (PIES)</string>
    <string name="removeFeetArmor">ELIMINAR (PIES)</string>
    <string name="equipName">Tipo de equipamiento</string>
    <string name="addArmorButton">Añadir pieza de armadura</string>
    <string name="magicArmor">Armadura mágica</string>
    <string name="genericWeapon">Arma genérica</string>
    <string name="genericArmor">Cutre</string>
    <string name="firstEdition">Primera edición</string>
    <string name="secondEdition">Segunda edición</string>
    <string name="pre">PRE</string>
    <string name="luENC">+1 ENC</string>
    <string name="chooseDruid">(elige una al adquirir Cambiaformas y otra a nivel 4)</string>
    <string-array name="dados">
        <item>-</item>
        <item>D3</item>
        <item>D4</item>
        <item>D6</item>
        <item>D8</item>
        <item>D10</item>
        <item>D12</item>
        <item>D20</item>
    </string-array>
    <string-array name="nombres">
        <item>Garrim</item>
        <item>Percivald</item>
        <item>Alyssa</item>
        <item>Raphael</item>
        <item>Carlos II</item>
        <item>Amapola</item>
        <item>Celeste</item>
        <item>Mora</item>
        <item>Rubio</item>
        <item>Prado</item>
        <item>Orquídea</item>
        <item>Sargento</item>
        <item>Coronel</item>
        <item>Teniente</item>
        <item>Capitán</item>
        <item>General</item>
        <item>Magucius</item>
        <item>Jonathan</item>
        <item>Lisa</item>
        <item>Joseph</item>
        <item>Donatello</item>
        <item>Michelangelo</item>
        <item>Leonardo</item>
        <item>Jumi</item>
    </string-array>
    <string-array name="apellidos">
        <item>Puño</item>
        <item>Pulmón</item>
        <item>Cráneo</item>
        <item>Diente</item>
        <item>Sable</item>
        <item>Cabello</item>
        <item>Pendiente</item>
        <item>Anillo</item>
        <item>Hueso</item>
        <item>Monte</item>
        <item>Dedo</item>
        <item>Huevo</item>
    </string-array>
    <string-array name="apellidos2">
        <item>dorado</item>
        <item>plateado</item>
        <item>torcido</item>
        <item>ebrio</item>
        <item>helado</item>
        <item>ardiente</item>
        <item>genial</item>
        <item>asqueroso</item>
        <item>intelectual</item>
        <item>alfa</item>
        <item>perfecto</item>
        <item>débil</item>
        <item>necio</item>
        <item>cuadrado</item>
        <item>partido</item>
        <item>jodío</item>
        <item>bravo</item>
    </string-array>
    <string-array name="tiposObjetos">
        <item>Arma cortante a una mano</item>
        <item>Arma cortante a dos manos</item>
        <item>Arma punzante a una mano</item>
        <item>Arma punzante a dos manos</item>
        <item>Arma contundente a una mano</item>
        <item>Arma contundente a dos manos</item>
        <item>Escudo a una mano</item>
        <item>Escudo a dos manos</item>
        <item>Arma de disparo pequeña a una mano</item>
        <item>Arma de disparo pequeña a dos manos</item>
        <item>Arma de disparo grande a una mano</item>
        <item>Arma de disparo grande a dos manos</item>
        <item>Armadura (cabeza)</item>
        <item>Armadura (cuerpo)</item>
        <item>Armadura (piernas)</item>
        <item>Armadura (pies)</item>
        <item>Reliquia</item>
        <item>Miscelánea</item>
    </string-array>
</resources>
